[package]
name = "kair-os"
version = "1.0.0"
edition = "2021"
description = "KAIR.OS - Quantum-Neural Autonomous Scheduler (Rust Core)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
