[package]
name = "kair-os"
version = "2.0.0"
edition = "2021"
description = "KAIR.OS — Pure Native Quantum-Neural Scheduler. Zero external dependencies."
authors = ["Maciej Koziej <maciej.koziej01@gmail.com>"]
repository = "https://github.com/szachmacik/kair-os"
license = "Proprietary"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ONLY native CF Workers crate + serde for JSON — nothing else
worker = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NO chrono, NO reqwest, NO tokio, NO external HTTP clients
# Everything uses native CF Workers APIs

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"  # optimize for size

[features]
default = []
